use font-stretch and fix docs

--- a/packages/react/src/Heading/Heading.module.css
+++ b/packages/react/src/Heading/Heading.module.css
@@ -151,44 +151,44 @@
 
 .Heading--width-condensed,
 .Heading-narrow--width-condensed {
-  font-variation-settings: 'wdth' 75;
+  font-stretch: 75%;
 }
 
 .Heading--width-normal,
 .Heading-narrow--width-normal {
-  font-variation-settings: 'wdth' 100;
+  font-stretch: 100%;
 }
 
 .Heading--width-expanded,
 .Heading-narrow--width-expanded {
-  font-variation-settings: 'wdth' 125;
+  font-stretch: 125%;
 }
 
 @media screen and (min-width: 48rem) {
   .Heading-regular--width-condensed {
-    font-variation-settings: 'wdth' 75;
+    font-stretch: 75%;
   }
 
   .Heading-regular--width-normal {
-    font-variation-settings: 'wdth' 100;
+    font-stretch: 100%;
   }
 
   .Heading-regular--width-expanded {
-    font-variation-settings: 'wdth' 125;
+    font-stretch: 125%;
   }
 }
 
 @media screen and (min-width: 80rem) {
   .Heading-narrow--weight-expanded .Heading-wide--width-condensed {
-    font-variation-settings: 'wdth' 75;
+    font-stretch: 75%;
   }
 
   .Heading-wide--width-normal {
-    font-variation-settings: 'wdth' 100;
+    font-stretch: 100%;
   }
 
   .Heading-wide--width-expanded {
-    font-variation-settings: 'wdth' 125;
+    font-stretch: 125%;
   }
 }
 
